back-end/deployments/azure/k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nusaroute
  labels:
    # Enable automatic Istio sidecar injection for every pod in this namespace.
    istio-injection: enabled
